fix: correct column names

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "efureev/laravel-trees",
+  "name": "khazhinov/laravel-trees",
   "description": "Multi-Tree structures for Laravel",
   "license": "MIT",
   "keywords": [
